--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,7 +11,7 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - main
     
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
           github_user_name: Mateus-dutravale
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake-dark.svg
           
           
       # push the content of <build_dir> to a branch
